--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-$bgColor: #101019;
-$bgColor2: #056AFF;
-$txtColor: #FFF;
+$bColor: #101019;
+$bColor2: #056AFF;
+$tColor: #FFF;
 
 @mixin flex($dir, $ai, $jc) {
   display: flex;
@@ -15,13 +15,187 @@ $txtColor: #FFF;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all .2s;
 }
 
 html {
   font-family: 'Poppins', sans-serif;
 }
 
+.light-mode {
+  background-color: $bColor2;
+}
+
+.dark-mode {
+  background-color: $bColor;
+}
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 25px;
+}
+
+#get-in-touch {
+  background-color: white;
+  color: $bColor;
+  font-size: 2vw;
+  font-weight: 600;
+  padding: 10px 30px;
+  border-radius: 100px;
+  
+  &:hover {
+    position: relative;
+    transform: translateY(-5px);
+  }
+}
+
 main {
   min-height: 90vh;
-  background-color: $bgColor;
+  background-color: $bColor;
+}
+
+.nav-visible {
+  transform: translateY(0vh) !important;
+}
+
+nav {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  transform: translateY(-200vh);
+  position: fixed;
+  z-index: 5;
+  overflow: hidden;
+
+  a {
+    text-decoration: none;
+    color: white;
+  }
+
+  .nav-body {
+    position: relative;
+    width: 300px;
+    left: 50%;
+    top: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    @include flex(column, center, center);
+    row-gap: 30px;
+  }
+
+  .links {
+    @include flex(column, center, center);
+    a {
+      position: relative;
+      font-size: 2.2vw;
+      font-weight: 700;
+
+      &:hover {
+        transform: translateY(-5px);
+      }
+    }
+  }
+
+  .sm-links {
+    @include flex(row, center, center);
+    column-gap: 30px; 
+    padding: 10px;
+    
+    a {
+      position: relative;
+      img {
+        height: 50px;
+      }
+
+      &:hover {
+        transform: translateY(-5px);
+      }
+    }
+  }
+}
+
+header {
+  background-color: $bColor;
+  height: 100px;
+  position: absolute;
+  z-index: 10;
+  width: 100vw;
+
+  .header {
+    @include flex(row, center, space-between);
+    height: 100%;
+
+    #icon {
+      @include flex(row, center, flex);
+      img {
+        height: 70px;
+      }
+
+      &:hover {
+        transform: scale(.9);
+      }
+    }
+
+    .controls {
+      @include flex(row, center, space-between);
+      column-gap: 20px;
+
+      #toggle {
+        position: relative;
+        @include flex(row, center, space-between);
+        border: 3px solid white;
+        width: 100px;
+        padding: 10px;
+        border-radius: 100px;
+        cursor: pointer;
+
+        img {
+          height: 25px;
+        }
+        
+        #circle {
+          position: absolute;
+          height: 30px;
+          width: 30px;
+          background-color: white;
+          border-radius: 100%;
+        }
+      }
+
+      #menu {
+        cursor: pointer;
+        height: 50px;
+        width: 50px;
+        @include flex(column, center, center);
+        row-gap: 10px;
+        
+        .line {
+          position: relative;
+          height: 4px;
+          background-color: white;
+          width: 100%;
+          border-radius: 100px;
+        }
+      }
+
+      .active {
+        .line:nth-child(1) {
+          transform: rotate(45deg) translateX(10px);
+          transform-origin: center;
+        }
+
+        .line:nth-child(2) {
+          transform: rotate(-45deg) translateX(10px);
+          transform-origin: center;
+        }
+      }
+    }
+  }
+}
+
+main {
+  position: absolute;
+  width: 100vw;
+  min-height: calc(100vh - 100px);
+  top: 100px;
 }
